Fix spacing with h1 and hr margins
Fixed the space between hr and h2 top margin (div), which broke the space between h1 and the top h2 (div) and got fixed.

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 h1 {
   font-family: "Tulpen One";
   font-size: 10vw;
-  margin-bottom: 0;
+  margin-bottom: 3vw;
 }
 
 table,
@@ -36,6 +36,10 @@ img {
   width: 15vw;
   margin-left: auto;
   margin-right: auto;
+}
+
+h2 {
+  margin-top: 0;
 }
 
 .letter {
